# tacktcix

./: .env.example  .gitignore  404.html  Dockerfile.app  Dockerfile.heartbeat  Dockerfile.sandbox  Dockerfile.worker  Makefile  dashboard.html  dashboard.txt  docker-compose.app.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  index.html  index.txt  onboarding.html  onboarding.txt  package-lock.json  package.json  pytest.ini  requirements.txt
backend/: .vercelignore  alembic.ini  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_onboarding.py  002_add_activity_events.py  003_add_agents.py  004_add_task_assignee_agent.py
backend/api/: app.py
backend/app/: main.py
backend/app/api/: agents.py  companies.py  events.py  health.py  onboarding.py
backend/app/core/: config.py  database.py  health.py  metrics.py  tenant.py
backend/app/middleware/: tenant.py
backend/app/models/: agent.py  company.py  onboarding.py
backend/app/services/: agent_registry_service.py  architecture_service.py  constitution_service.py  event_service.py  knowledge_graph_service.py  onboarding_service.py  roadmap_service.py  task_generation_service.py  task_orchestrator_service.py
backend/prisma/: schema.prisma
backend/tests/: test_agent_registry.py  test_event_service.py  test_metrics.py  test_task_orchestrator.py
config/: browser-automation.yaml  resource_profiles.yaml  security.yaml  worker.yaml
dashboard/: activity.html  activity.txt  budget.html  budget.txt  workflow.html  workflow.txt
(+204 files in other folders)
